<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/mainSwipeRefreshLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--        <RelativeLayout-->
            <!--            android:id="@+id/relativeLayout"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="20dp">-->

            <!--            <TextView-->
            <!--                android:id="@+id/textView"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="50dp"-->
            <!--                android:layout_marginStart="20dp"-->
            <!--                android:layout_marginTop="20dp"-->
            <!--                android:text="@string/TITLE"-->
            <!--                android:textSize="40sp"-->
            <!--                android:fontFamily="@font/google_sans_regular"/>-->

            <!--            <ImageView-->
            <!--                android:id="@+id/settings_icon"-->
            <!--                android:layout_width="50dp"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:layout_marginStart="330dp"-->
            <!--                android:layout_marginTop="25dp"-->
            <!--                android:layout_marginEnd="20dp"-->
            <!--                android:src="@drawable/round_settings_24" />-->
            <!--        </RelativeLayout>-->

            <RelativeLayout
                android:id="@+id/museBeatSection"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/musebeat_bg"
                android:elevation="8dp"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="7dp">

                <!-- MuseBeat Logo -->
                <ImageView
                    android:id="@+id/museBeatLogo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/welcome_icon_removebg"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerInside"
                    android:layout_marginEnd="10dp" />



                <!-- MuseBeat Name -->
                <TextView
                    android:id="@+id/museBeatName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/museBeatLogo"
                    android:layout_centerVertical="true"
                    android:text="MuseBeat"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/google_sans_regular"
                    android:letterSpacing="0.1"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="3" />

                <!-- Settings Icon (Right Corner) -->
                <ImageView
                    android:id="@+id/settings_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/round_settings_24"
                    android:padding="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    app:tint="#FFFFFF" />
        </RelativeLayout>
        <LinearLayout
                android:id="@+id/headerSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_below="@id/museBeatSection">

            <!-- Greeting Text -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:paddingHorizontal="18dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/home_greetingtxt"
                    android:text="HELLO JACK"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:fontFamily="@font/google_sans_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="What do you feel like today?"
                    android:textSize="14sp"
                    android:fontFamily="@font/google_sans_regular"
                    android:textColor="#E0E0E0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/home_searchBar"
                android:layout_below="@id/headerSection"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:background="@drawable/search_bar_bg"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="10dp"
                android:elevation="5dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_search_24"
                    android:layout_marginEnd="10dp"
                    app:tint="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="Search song, album, playlist, artist"
                    android:textColor="#000000"
                    android:background="@null"
                    android:textSize="16sp"/>
            </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/home_searchBar"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="18dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:radius="16dp"
                    app:cardCornerRadius="16dp"
                    app:cardBackgroundColor="#1E1E1E">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <!-- Background Image -->
                        <ImageView
                            android:id="@+id/slider_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/welcome_icon_removebg"/>

                        <!-- Gradient Overlay -->
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/gradient_overlay"/>

                        <!-- Song Title -->
                        <TextView
                            android:id="@+id/tv_title"
                            android:fontFamily="@font/google_sans_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="For A While"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textColor="#FFFFFF"
                            android:layout_margin="16dp"/>

                        <!-- Subtitle -->
                        <TextView
                            android:id="@+id/tv_subtitle"
                            android:fontFamily="@font/google_sans_regular"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Aubrey Lauren"
                            android:textSize="16sp"
                            android:textColor="#CCCCCC"
                            android:layout_below="@id/tv_title"
                            android:layout_marginStart="16dp"/>

                        <!-- Trending Icon + Plays -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_below="@id/tv_subtitle"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp">

                        </LinearLayout>

                        <!-- Play Button -->
                        <Button
                            android:id="@+id/btn_play"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:text="Play Now"
                            android:fontFamily="@font/google_sans_regular"
                            android:textStyle="bold"
                            android:backgroundTint="#6366F1"
                            android:textColor="#FFFFFF"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="16dp"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/recently_played_recycler">
                    <TextView
                        android:id="@+id/user_history"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recently_played"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="30sp"
                        android:paddingVertical="16dp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/user_history_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:padding="8dp"
                        android:background="@drawable/background1" />

                </LinearLayout>
                <!--  implement user history and its recycler -->
                <TextView
                    android:id="@+id/empty_history_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No history found, \nStart Listening "
                    android:fontFamily="@font/google_sans_regular"
                    android:textSize="32sp"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:visibility="gone"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:text="@string/category"
                        android:textColor="@color/white"
                        android:textColorHighlight="@color/black"
                        android:textSize="20sp"
                        android:layout_marginVertical="15dp"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/categories_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/topSongsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/top_songs"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="20sp"
                        android:paddingVertical="16dp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_songs_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/trendingSongsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Trending Songs"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="20sp"
                        android:paddingVertical="16dp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/trending_songs_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"/>
                </LinearLayout>
<!--//add popular songs-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/popularSongsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Popular Songs"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="20sp"
                        android:paddingVertical="16dp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/popular_songs_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/offline_songs_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Music from your device"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/google_sans_regular"
                        android:textSize="20sp"
                        android:paddingVertical="16dp" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/offline_songs_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/google_sans_regular"
                        android:layout_marginBottom="70dp"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

